move index.html out from the webfile so as to serve as the entry file on vercel

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../Images/favIcon2.png" type="image/x-icon">
-    <link rel="stylesheet" href="../styleFiles/style.css">
+    <link rel="stylesheet" href="./styleFiles/style.css">
     <title>Mortage | Cal</title>
 </head>
 <body>
@@ -96,6 +96,6 @@
         </div>
       </div>   
 
-      <script src="../scriptFiles/index.js"></script> 
+      <script src="./scriptFiles/index.js"></script> 
 </body>
 </html>
