updating the stylesheet file

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <label class="label">mortgage amount</label>
                         <div class="form_action border">
                             <span class="span_err_mg">£</span>
-                            <input type="text" id="mortgage_amount">
+                            <input type="text" id="mortgage_amount"/>
                         </div>
                         <p class="error_mg"></p>
                     </div>
@@ -28,7 +28,7 @@
                         <div class="mortgage">
                             <label>mortgage term</label>
                             <div class="sub_div border">
-                                <input type="text" id="mortgage_term">
+                                <input type="text" id="mortgage_term" />
                                  <span class="span_err_mg">years</span>
                             </div>
                             <p class="error_mg"></p>
@@ -37,7 +37,7 @@
                         <div class="mortgage">
                             <label>interest rate</label>
                             <div class="sub_div border">
-                                <input type="text" id="interest_rate" >
+                                <input type="text" id="interest_rate"/>
                                 <span class="span_err_mg">%</span>
                             </div>
                             <p class="error_mg"></p>
@@ -46,11 +46,11 @@
                     <div class="mortgage_type_container">
                          <label> mortgage type</label>
                         <div class="mortgage_type">
-                            <input type="checkbox" value="repayment" class="checkbox">
+                            <input type="checkbox" value="repayment" class="checkbox" />
                             <span>repayment</span>
                         </div>
                         <div class="mortgage_type">
-                            <input type="checkbox"  value="interest" class="checkbox">
+                            <input type="checkbox"  value="interest" class="checkbox" />
                             <span>interest only</span>
                         </div>
                     </div>
